# sv2-apps

./: README.md
miner-apps/: Cargo.toml
miner-apps/jd-client/: Cargo.toml
miner-apps/jd-client/src/lib/: config.rs  error.rs  mod.rs
miner-apps/jd-client/src/lib/channel_manager/: downstream_message_handler.rs  mod.rs  template_message_handler.rs
miner-apps/jd-client/src/lib/downstream/: mod.rs
miner-apps/jd-client/src/lib/ehash_mint/: mod.rs
miner-apps/mining-device/: Cargo.toml
miner-apps/mining-device/src/lib/: mod.rs
miner-apps/translator/: Cargo.toml
miner-apps/translator/src/lib/: config.rs  mod.rs  utils.rs
miner-apps/translator/src/lib/sv1/downstream/: downstream.rs  message_handler.rs  mod.rs
miner-apps/translator/src/lib/sv1/sv1_server/: channel.rs  downstream_message_handler.rs  sv1_server.rs
miner-apps/translator/src/lib/sv2/channel_manager/: channel_manager.rs
pool-apps/jd-server/: Cargo.toml
pool-apps/jd-server/src/lib/: config.rs  error.rs  mod.rs  status.rs  utils.rs
pool-apps/jd-server/src/lib/job_declarator/: message_handler.rs  mod.rs
pool-apps/jd-server/src/lib/mempool/: error.rs  mod.rs
pool-apps/pool/: Cargo.toml
pool-apps/pool/src/lib/: config.rs
pool-apps/pool/src/lib/channel_manager/: mining_message_handler.rs  mod.rs
roles/hashrate-multiplexer/: Cargo.toml  README.md
roles/hashrate-multiplexer/config-examples/: config.toml
roles/hashrate-multiplexer/src/: main.rs
roles/hashrate-multiplexer/src/lib/: config.rs  error.rs  mod.rs  rebalancer.rs
roles/multiplexer-core/: Cargo.toml  README.md  config.example.toml
roles/multiplexer-core/src/: config.rs  error.rs  lib.rs  metrics.rs
roles/multiplexer-core/src/assignment/: manager.rs  mod.rs  types.rs
roles/multiplexer-core/src/controller/: pid.rs
roles/multiplexer-core/src/upstream/: mod.rs
stratum-apps/: Cargo.toml
