[workspace]
resolver="2"

members = [
    "jd-client",
    "translator",
]

exclude = [
    "mining-device"
]

[profile.dev]
# Required by super_safe_lock
opt-level = 1

[profile.test]
# Required by super_safe_lock
opt-level = 1

# Patch stratum crates to use our local fork with ehash support (CompressedPubKey type)
[patch."https://github.com/stratum-mining/stratum"]
binary_sv2 = { path = "../../stratum/sv2/binary-sv2" }
derive_codec_sv2 = { path = "../../stratum/sv2/binary-sv2/derive_codec" }
framing_sv2 = { path = "../../stratum/sv2/framing-sv2" }
codec_sv2 = { path = "../../stratum/sv2/codec-sv2" }
noise_sv2 = { path = "../../stratum/sv2/noise-sv2" }
buffer_sv2 = { path = "../../stratum/sv2/buffer-sv2" }
common_messages_sv2 = { path = "../../stratum/sv2/subprotocols/common-messages" }
mining_sv2 = { path = "../../stratum/sv2/subprotocols/mining" }
job_declaration_sv2 = { path = "../../stratum/sv2/subprotocols/job-declaration" }
template_distribution_sv2 = { path = "../../stratum/sv2/subprotocols/template-distribution" }
extensions_sv2 = { path = "../../stratum/sv2/extensions-sv2" }
parsers_sv2 = { path = "../../stratum/sv2/parsers-sv2" }
handlers_sv2 = { path = "../../stratum/sv2/handlers-sv2" }
channels_sv2 = { path = "../../stratum/sv2/channels-sv2" }
stratum-core = { path = "../../stratum/stratum-core" }