[package]
name = "multiplexer-core"
version = "0.1.0"
edition = "2021"
authors = ["Stratum V2 Developers"]
license = "MIT OR Apache-2.0"
description = "Core library for hashrate multiplexing across multiple Stratum V2 upstreams"
repository = "https://github.com/stratum-mining/stratum"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
tracing = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Collections
hashbrown = "0.14"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"
